--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -1,10 +1,10 @@
 ﻿<Window x:Class="Resynk.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="195" Width="345">
+        Title="Resynk" Height="109" Width="292">
     <Grid>
-        <Button Content="Ouvrir un fichier" HorizontalAlignment="Left" Margin="90,133,0,0" VerticalAlignment="Top" Width="107" Click="Button_Click_1"/>
-        <Button Content="Quitter" HorizontalAlignment="Left" Margin="233,133,0,0" VerticalAlignment="Top" Width="75" Click="Exit"/>
+        <Button Content="Ouvrir un fichier" HorizontalAlignment="Left" Margin="35,30,0,0" VerticalAlignment="Top" Width="107" Click="Button_Click_1"/>
+        <Button Content="Quitter" HorizontalAlignment="Left" Margin="178,30,0,0" VerticalAlignment="Top" Width="75" Click="Exit"/>
 
     </Grid>
 </Window>
