--- a/WpfApplication1/Window1.xaml
+++ b/WpfApplication1/Window1.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:nb="clr-namespace:Resynk"
-        Title="Window1" Height="200" Width="345">
+        Title="Resynk" Height="200" Width="345">
     <Grid>
         <StackPanel Orientation="Vertical">
             <StackPanel Orientation="Horizontal" Margin="0,0,0,0" VerticalAlignment="Top">
