--- a/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/MainWindow.xaml
@@ -9,7 +9,7 @@
                 <GradientStop Color="#FF56626F" Offset="0.984"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <Button Content="Ouvrir un fichier" HorizontalAlignment="Left" Margin="35,30,0,0" VerticalAlignment="Top" Width="107" Click="Button_Click_1"/>
-        <Button Content="Quitter" HorizontalAlignment="Left" Margin="178,30,0,0" VerticalAlignment="Top" Width="75" Click="Exit"/>
+        <Button Height="24" Content="Ouvrir un fichier" HorizontalAlignment="Left" Margin="35,30,0,0" VerticalAlignment="Top" Width="107" Click="Button_Click_1"/>
+        <Button Height="24" Content="Quitter" HorizontalAlignment="Left" Margin="178,30,0,0" VerticalAlignment="Top" Width="75" Click="Exit"/>
     </Grid>
 </Window>
