--- a/WpfApplication1/Window1.xaml
+++ b/WpfApplication1/Window1.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:nb="clr-namespace:Resynk"
-        Title="Resynk" Height="200" Width="345">
+        Title="Resynk" Height="350" Width="346">
     <Grid>
         <StackPanel Orientation="Vertical">
             <StackPanel.Background>
@@ -16,16 +16,32 @@
                 <TextBox x:Name="tbFic" HorizontalAlignment="Left" Height="23" Margin="10,10,0,5" IsEnabled="False" TextWrapping="Wrap" 
                      Text="TextBox" VerticalAlignment="Top" Width="240"/>
             </StackPanel>
-            <StackPanel Name="spTemps" Orientation="Horizontal" Height="40" Margin="15,11,0,6">
-                <StackPanel></StackPanel>
-                <TextBox Name="h" Width="40" Height="30" Margin="0,0,0,5" Text="0"/>
-                <Label Content="h"></Label>
-                <TextBox Name="m" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
-                <Label Content="m"></Label>
-                <TextBox Name="s" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
-                <Label Content="s"></Label>
-                <TextBox Name="z" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
-                <Label Content="µ"></Label>
+            <StackPanel Margin="0,10,0,5" Orientation="Vertical">
+                <Label Margin="15,0,0,0">A partir de</Label>
+                <StackPanel Name="exTemps" Orientation="Horizontal" Height="40" Margin="15,11,0,6">
+                    <TextBox Name="exh" Width="40" Height="30" Margin="0,0,0,5" Text="0"/>
+                    <Label Content="h"></Label>
+                    <TextBox Name="exm" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
+                    <Label Content="m"></Label>
+                    <TextBox Name="exs" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
+                    <Label Content="s"></Label>
+                    <TextBox Name="exz" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
+                    <Label Content="µ"></Label>
+                </StackPanel>
+            </StackPanel>
+            <StackPanel Orientation="Vertical">
+                <Label Margin="15,0,0,0">Ajouter</Label>
+                <StackPanel Name="spTemps" Orientation="Horizontal" Height="40" Margin="15,11,0,6">
+                    <StackPanel></StackPanel>
+                    <TextBox Name="h" Width="40" Height="30" Margin="0,0,0,5" Text="0"/>
+                    <Label Content="h"></Label>
+                    <TextBox Name="m" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
+                    <Label Content="m"></Label>
+                    <TextBox Name="s" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
+                    <Label Content="s"></Label>
+                    <TextBox Name="z" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
+                    <Label Content="µ"></Label>
+                </StackPanel>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Height="40" Margin="15,0,0,0">
                 <WrapPanel>
@@ -37,11 +53,14 @@
                     <Label Content="En plus"></Label>
                 </WrapPanel>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom">
-                <Button x:Name="bResynk" Content="Resynk" Margin="80,0,5,0" IsEnabled="False" HorizontalAlignment="Left" 
+            <WrapPanel Margin="0,0,0,20">
+                <ProgressBar Name="pb" Maximum="100" Minimum="0" Value="{Binding Percent}" Margin="15,0,15,0" Height="24" Width="300"></ProgressBar>
+            </WrapPanel>
+            <StackPanel Height="25" Orientation="Horizontal" VerticalAlignment="Bottom">
+                <Button Height="24" x:Name="bResynk" Content="Resynk" Margin="80,0,5,0" IsEnabled="False" HorizontalAlignment="Left" 
             		VerticalAlignment="Top" Width="75" Click="bResynk_Click" />
-                <Button Content="Retour" HorizontalAlignment="Left" Margin="5,0,5,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-                <Button Content="Quitter" HorizontalAlignment="Left" Margin="5,0,5,0" VerticalAlignment="Top" Width="75" Click="Exit"/>
+                <Button Height="24" Content="Retour" HorizontalAlignment="Left" Margin="5,0,5,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+                <Button Height="24" Content="Quitter" HorizontalAlignment="Left" Margin="5,0,5,0" VerticalAlignment="Top" Width="75" Click="Exit"/>
             </StackPanel>
         </StackPanel>
     </Grid>
