--- a/WpfApplication1/Window1.xaml
+++ b/WpfApplication1/Window1.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:nb="clr-namespace:Resynk"
-        Title="Resynk" Height="350" Width="346">
+        Title="SrtResynk" Height="350" Width="346">
     <Grid>
         <StackPanel Orientation="Vertical">
             <StackPanel.Background>
@@ -58,7 +58,7 @@
                 <ProgressBar Name="pb" Maximum="100" Minimum="0" Margin="15,0,15,0" Height="24" Width="300"></ProgressBar>
             </WrapPanel>
             <StackPanel Height="25" Orientation="Horizontal" VerticalAlignment="Bottom">
-                <Button Height="24" x:Name="bResynk" Content="Resynk" Margin="80,0,5,0" IsEnabled="False" HorizontalAlignment="Left" 
+                <Button Height="24" x:Name="bResynk" Content="SrtResynk" Margin="80,0,5,0" IsEnabled="False" HorizontalAlignment="Left" 
             		VerticalAlignment="Top" Width="75" Click="bResynk_Click" />
                 <Button Height="24" Content="Retour" HorizontalAlignment="Left" Margin="5,0,5,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
                 <Button Height="24" Content="Quitter" HorizontalAlignment="Left" Margin="5,0,5,0" VerticalAlignment="Top" Width="75" Click="Exit"/>
