--- a/WpfApplication1/Window1.xaml
+++ b/WpfApplication1/Window1.xaml
@@ -7,61 +7,65 @@
         <StackPanel Orientation="Vertical">
             <StackPanel.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
-                    <GradientStop Color="#FF3D4650"/>
-                    <GradientStop Color="#FF56626F" Offset="0.984"/>
+                    <GradientStop Color="#FF3D4650" />
+                    <GradientStop Color="#FF56626F" Offset="0.984" />
                 </LinearGradientBrush>
             </StackPanel.Background>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,0" VerticalAlignment="Top">
-                <Label Content="Fichier :" HorizontalAlignment="Left" Margin="20,15,0,0" VerticalAlignment="Top"/>
-                <TextBox x:Name="TbFic" HorizontalAlignment="Left" Height="23" Margin="10,10,0,5" IsEnabled="False" TextWrapping="Wrap" 
-                     Text="TextBox" VerticalAlignment="Top" Width="240"/>
+                <Label Content="Fichier :" HorizontalAlignment="Left" Margin="20,15,0,0" VerticalAlignment="Top" />
+                <TextBox x:Name="TbFic" HorizontalAlignment="Left" Height="23" Margin="10,10,0,5" IsEnabled="False"
+                         TextWrapping="Wrap"
+                         Text="TextBox" VerticalAlignment="Top" Width="240" />
             </StackPanel>
             <StackPanel Margin="0,10,0,5" Orientation="Vertical">
                 <Label Margin="15,0,0,0">A partir de</Label>
                 <StackPanel Name="ExTemps" Orientation="Horizontal" Height="40" Margin="15,11,0,6">
-                    <TextBox Name="Exh" Width="40" Height="30" Margin="0,0,0,5" Text="0"/>
-                    <Label Content="h"></Label>
+                    <TextBox Name="Exh" Width="40" Height="30" Margin="0,0,0,5" Text="0" />
+                    <Label Content="h" />
                     <TextBox Name="Exm" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
-                    <Label Content="m"></Label>
+                    <Label Content="m" />
                     <TextBox Name="Exs" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
-                    <Label Content="s"></Label>
+                    <Label Content="s" />
                     <TextBox Name="Exz" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
-                    <Label Content="µ"></Label>
+                    <Label Content="µ" />
                 </StackPanel>
             </StackPanel>
             <StackPanel Orientation="Vertical">
                 <Label Margin="15,0,0,0">Ajouter</Label>
                 <StackPanel Name="SpTemps" Orientation="Horizontal" Height="40" Margin="15,11,0,6">
-                    <StackPanel></StackPanel>
-                    <TextBox Name="H" Width="40" Height="30" Margin="0,0,0,5" Text="0"/>
-                    <Label Content="h"></Label>
+                    <StackPanel />
+                    <TextBox Name="H" Width="40" Height="30" Margin="0,0,0,5" Text="0" />
+                    <Label Content="h" />
                     <TextBox Name="M" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
-                    <Label Content="m"></Label>
+                    <Label Content="m" />
                     <TextBox Name="S" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
-                    <Label Content="s"></Label>
+                    <Label Content="s" />
                     <TextBox Name="Z" Width="40" Height="30" Margin="15,0,0,5" Text="0" />
-                    <Label Content="µ"></Label>
+                    <Label Content="µ" />
                 </StackPanel>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Height="40" Margin="15,0,0,0">
                 <WrapPanel>
-                    <Label Content="En moins"></Label>
-                    <RadioButton Name="RbMoins" GroupName="gn" Margin="5,5,0,0" Checked="RadioButton_Checked_1"></RadioButton>
+                    <Label Content="En moins" />
+                    <RadioButton Name="RbMoins" GroupName="gn" Margin="5,5,0,0" Checked="RadioButton_Checked_1" />
                 </WrapPanel>
                 <WrapPanel Margin="40,0,0,0">
-                    <RadioButton Name="RbPlus" GroupName="gn" Margin="0,5,5,0" Checked="RadioButton_Checked_2"></RadioButton>
-                    <Label Content="En plus"></Label>
+                    <RadioButton Name="RbPlus" GroupName="gn" Margin="0,5,5,0" Checked="RadioButton_Checked_2" />
+                    <Label Content="En plus" />
                 </WrapPanel>
             </StackPanel>
             <WrapPanel Margin="0,0,0,20">
                 <!-- binding ??? -->
-                <ProgressBar Name="Pb" Maximum="100" Minimum="0" Margin="15,0,15,0" Height="24" Width="300"></ProgressBar>
+                <ProgressBar Name="Pb" Maximum="100" Minimum="0" Margin="15,0,15,0" Height="24" Width="300" />
             </WrapPanel>
             <StackPanel Height="25" Orientation="Horizontal" VerticalAlignment="Bottom">
-                <Button Height="24" x:Name="BResynk" Content="SrtResynk" Margin="80,0,5,0" IsEnabled="False" HorizontalAlignment="Left" 
-            		VerticalAlignment="Top" Width="75" Click="bResynk_Click" />
-                <Button Height="24" Content="Retour" HorizontalAlignment="Left" Margin="5,0,5,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-                <Button Height="24" Content="Quitter" HorizontalAlignment="Left" Margin="5,0,5,0" VerticalAlignment="Top" Width="75" Click="Exit"/>
+                <Button Height="24" x:Name="BResynk" Content="SrtResynk" Margin="80,0,5,0" IsEnabled="False"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Top" Width="75" Click="bResynk_Click" />
+                <Button Height="24" Content="Retour" HorizontalAlignment="Left" Margin="5,0,5,0"
+                        VerticalAlignment="Top" Width="75" Click="Button_Click_1" />
+                <Button Height="24" Content="Quitter" HorizontalAlignment="Left" Margin="5,0,5,0"
+                        VerticalAlignment="Top" Width="75" Click="Exit" />
             </StackPanel>
         </StackPanel>
     </Grid>
